@@ -28,6 +28,9 @@ Changelog 0.7.1.1
 + word suggestions from the app (implemented in the MediaPlayer search)
 [SA-00453] change the icon of the config app
 [SA-00191] show lyrics of the mp3's
+[SA-00455] Sally: FirstStartWizard problems
++ crash with ImageBrowser
++ two active windows
 
 
 Changelog 0.7.0.6
